// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eight.js 1`] = `
"const Eight = glamorous.div((
  {
    important,

    theme: {
      main: {fontSize: theFontSize}
    }
  }
) => ({
  fontSize: theFontSize,
  color: important ? 'red' : 'black'
}))
"
`;

exports[`five.js 1`] = `
"const Five = glamorous.div(props => ({
  fontSize: props.theme.main.fontSize,
  color: props.important ? 'red' : 'black'
}))
"
`;

exports[`four.js 1`] = `
"const Four = glamorous.div((
  {
    important,
    theme
  }
) => ({
  fontSize: theme.main.fontSize,
  color: important ? 'red' : 'black'
}))
"
`;

exports[`nine.js 1`] = `
"const Nine = glamorous.div(props => ({
  fontSize: props.theme.main.fontSize,
  fontWeight: props.theme.main.fontWeight,
  color: props.important ? 'red' : 'black'
}))
"
`;

exports[`one.js 1`] = `
"const One = glamorous.div((
  {
    theme
  }
) => ({
  fontSize: theme.main.fontSize
}))
"
`;

exports[`seven.js 1`] = `
"const Seven = glamorous.div(({theme}) => ({
  fontSize: theme.main.fontSize,
}))
"
`;

exports[`six.js 1`] = `
"const Six = glamorous.div((
  {
    important,

    theme: {
      main
    }
  }
) => ({
  fontSize: main.fontSize,
  color: important ? 'red' : 'black'
}))
"
`;

exports[`ten.js 1`] = `
"const Section = glamorous.section(p => ({
  borderBottom: \`1px solid \${p.theme.colors.primary.light}\`,
  width: '100%',
  margin: '20px auto 75px',
  paddingBottom: 20,
  maxWidth: '50rem'
}))
"
`;

exports[`three.js 1`] = `
"const Three = glamorous.div((
  {
    important,
    theme
  }
) => ({
  fontSize: theme.main.fontSize,
  color: important ? 'red' : 'black'
}))
"
`;

exports[`two.js 1`] = `
"
const Two = glamorous.div((
  {
    theme
  },
  tripple
) => ({
  fontSize: theme.main.fontSize
}))
"
`;
